Changes by version:
===================

0.8.0-4
=======
Add durable_writes support. #293

0.8.0-3
=======

Note!!! fix for issue #294 renamed PoolExhaustedException for HPoolExhaustedException and created
a new base exception for pool related exceptions called: HPoolRecoverableException.

Fix race condition in connection pool. https://github.com/rantav/hector/issues/257
Reduce default size of ByteBufferOutputStream to 256 from 8196 bytes, https://github.com/rantav/hector/issues/268
ObjectSerializer can take a custom ClassLoader, https://github.com/rantav/hector/issues/134
Move EmbeddedSchemaLoader and EmbeddedServerHelper into the hector-test module, https://github.com/rantav/hector/issues/223
- hector-core depends only on cassandra-thrift, not cassandra-all
- Remove dependencies on avro, high-scale-lib 
Threads started by hector are daemon threads, https://github.com/rantav/hector/issues/220
Fixed speed4j setup - modified hector so it only uses speed4j.properties to configure logging.  the logger
  name must be of the form "hector-<cluster-name>".  Updating wiki page as well.
Fix issue https://github.com/rantav/hector/issues/294. 
Fix issue with non-rentrant mutators on ColumnFamilyTemplate hierarchy. See https://github.com/rantav/hector/issues/286
Close client on HInvalidRequestException and on HCassandraInternalException (issue-299)

0.8.0-2
=======
Synchronize on RR balancing policy counter
Added key_validation_class support on CfDef wrappers
Fixed issue with using correct timestamp on execution result which could manifest as order of magnitude differences in op timing in some cases
Added remove method to retry service, ensures that HConnectionManager.removeHost correctly pulls hosts from CassandraHostRetryService if configured. Addresses GH issue 216
Expose setters in ColumnFamilyDefinition iface
Added option to wait for schema agreements on cluster operations
Check for null on keys in a list. Addresses issue 221